--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
             <li>Mandag - fredag: 10.00 - 17:30</li>
             <li>Lørdag: 10.00 - 15.00</li>
           </ul>
+          <ul id="socials">
+            <li><img src="assets/facebook-ikon-hvid.png" alt="facebook icon" /></li>
+            <li><img src="assets/instagram-ikon-hvid.png" alt="instagram icon" /></li>
+            <li><img src="assets/pinterest-ikon-hvid.png" alt="pinterest icon" /></li>
+            <li><img src="assets/linkedin-ikon-hvid.png" alt="linkedin icon" /></li>
+          </ul>
         </div>
         <div>
           <h3>Information</h3>
